[tool.poetry]
name = "phils-finder"
version = "0.1.0"
description = ""
authors = ["Ajay-26 <aj.sailopal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.22.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
